plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.143'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    srcDir('src/generated/resources')

    exclude("**/*.bbmodel")
    exclude("src/generated/**/.cache")
}

def testModSourceSet = sourceSets.create('testMod') {
    java.setSrcDirs(['src/test-mod/java'])
    resources.setSrcDirs(['src/test-mod/resources'])
}

testModSourceSet.compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
testModSourceSet.runtimeClasspath += sourceSets.main.output + sourceSets.main.runtimeClasspath

repositories {
    maven { url = "https://cursemaven.com" }
    maven { url = "https://jitpack.io" }
    maven { url = "https://maven.firstdark.dev/snapshots" }
    maven { url = "https://maven.theillusivec4.top/" }
    maven { url = "https://maven.latvian.dev/releases" }
    maven { url = "https://maven.blamejared.com/" }
    maven { url = "https://modmaven.dev" }
    maven { url = "https://maven.ftb.dev/releases" }
    maven { url = "https://maven.architectury.dev" }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

def testServerGameDirectory = project.findProperty('mxtTestServerGameDirectory') ?: 'run-test-server'
def testServerPort = project.findProperty('mxtTestServerPort') ?: '25566'

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        testClient {
            client()
            gameDirectory = file('run-test-client')
            ideName = 'Test Client'
            systemProperty 'fml.debugLoading', 'true'
        }

        testServer {
            server()
            gameDirectory = file(testServerGameDirectory)
            ideName = 'Test Server'
            programArgument '--nogui'
            programArgument '--port'
            programArgument testServerPort
            systemProperty 'fml.debugLoading', 'true'
        }

        data {
            clientData()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.INFO
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
        "${mod_id}_test" {
            sourceSet(testModSourceSet)
        }
    }
}

tasks.named('runTestClient').configure {
    // The run task does not reliably pull in the test source set's resource
    // processing, so make both build phases explicit before launching.
    dependsOn(
            testModSourceSet.compileJavaTaskName,
            testModSourceSet.processResourcesTaskName,
            testModSourceSet.classesTaskName
    )
}

tasks.named('runTestServer').configure {
    // Same reason as the client below: the run task does not reliably pull in the test source set's resource
    // processing, so a server could launch with a stale `build/resources/testMod` pack and fail to load a
    // datapack file the working tree no longer has.
    dependsOn(
            testModSourceSet.compileJavaTaskName,
            testModSourceSet.processResourcesTaskName,
            testModSourceSet.classesTaskName
    )
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "curse.maven:jupiter-1072905:8569832"
//    implementation "com.lowdragmc.ldlib2:ldlib2-neoforge-26.1:${ldlib2_version}"

    implementation jarJar("net.objecthunter:exp4j:0.4.8")
    implementation jarJar("top.theillusivec4.curios:curios-neoforge:$curios_version")

    implementation jarJar("curse.maven:player-animation-library-1283899:8674772")
    implementation jarJar("curse.maven:bendable-cuboids-1302303:7986578")

    implementation "curse.maven:jade-324717:8651070"
    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
    runtimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")

    compileOnly "dev.latvian.mods:kubejs-neoforge:$kubejs_version"
//    localRuntime "dev.latvian.mods:kubejs-neoforge:$kubejs_version"

    //FTB
    compileOnly "dev.ftb.mods:ftb-library:26.1.2.8"
    compileOnly "dev.ftb.mods:ftb-teams:26.1.2.4"
    compileOnly "dev.ftb.mods:ftb-chunks:26.1.2.8"

//    runtimeOnly "dev.architectury:architectury-neoforge:20.1.14"
//    runtimeOnly "dev.ftb.mods:ftb-library-neoforge:26.1.2.8"
//    runtimeOnly "dev.ftb.mods:ftb-teams-neoforge:26.1.2.4"
//    runtimeOnly "dev.ftb.mods:ftb-chunks-neoforge:26.1.2.8"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            curios_version         : curios_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
